--- a/src/main/resources/templates/machines/index.html
+++ b/src/main/resources/templates/machines/index.html
@@ -6,7 +6,7 @@
 >
 <body>
     <section layout:fragment="content" id="machine_page_content" class="container mx-auto mt-4 min-h-dvh w-full z-0 flex flex-col">
-        <div th:replace="machines/machines_list"></div>
+        <div th:replace="machines/machines_view :: machines_view(${ machines })"></div>
     </section>
 </body>
 </html>
