--- a/src/main/resources/templates/machines/machines_list.html
+++ b/src/main/resources/templates/machines/machines_list.html
@@ -1,65 +1,72 @@
 <!DOCTYPE html>
 <html lang="en">
 <body>
-    <div id="machine-list" class="container mx-auto mt-4 min-h-dvh w-full z-0 flex flex-col">
-        <div class="flex justify-between">
-            <div class="grow"></div>
-            <div class="grow-0">
-                <button class="rounded-full bg-indigo-600 p-2 text-white shadow-sm hover:bg-indigo-500 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-600"
-                        th:hx-get="@{/machines/new}"
-                        hx-target="#machine_page_content"
-                >
-                    <svg class="h-5 w-5" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true">
-                        <path d="M10.75 4.75a.75.75 0 00-1.5 0v4.5h-4.5a.75.75 0 000 1.5h4.5v4.5a.75.75 0 001.5 0v-4.5h4.5a.75.75 0 000-1.5h-4.5v-4.5z" />
-                    </svg>
-                </button>
+    <div th:fragment="machine-list(machines)" id="machine-list" class="container mx-auto mt-4 min-h-dvh w-full z-0 flex flex-col">
+        <div class="flex flex-row justify-between sm:items-center">
+            <div class="sm:flex-auto">
+                <h1 class="text-base font-semibold leading-6 text-gray-900">Machines</h1>
+                <p class="mt-2 text-sm text-gray-700">These are all the machines in the system</p>
+            </div>
+            <div class="flex justify-between">
+                <div class="grow"></div>
+                <div class="grow-0">
+                    <button type="button" class="inline-flex items-center gap-x-2 rounded-md bg-indigo-600 px-3.5 py-2.5 text-sm font-semibold text-white shadow-sm hover:bg-indigo-500 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-600"
+                            th:hx-get="@{/machines/new}"
+                            hx-target="#machine_page_content"
+                    >
+                        <svg class="-ml-0.5 h-5 w-5" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true">
+                            <path fill-rule="evenodd" d="M10 18a8 8 0 100-16 8 8 0 000 16zm3.857-9.809a.75.75 0 00-1.214-.882l-3.483 4.79-1.88-1.88a.75.75 0 10-1.06 1.061l2.5 2.5a.75.75 0 001.137-.089l4-5.5z" clip-rule="evenodd" />
+                        </svg>
+                        Add Machine
+                    </button>
+                </div>
             </div>
         </div>
-
-        <div class="overflow-x-auto w-full" >
-            <table id="machines" class="table table-auto w-full">
-                <caption class="caption-top">
-                    Machines
-                </caption>
-                <thead>
-                <tr>
-                    <th></th>
-                    <th class="text-start">Name</th>
-                    <th class="text-start">Description</th>
-                    <th class="text-start">Brand</th>
-                    <th class="text-start">Model</th>
-                    <th>Is Active</th>
-                </tr>
-                </thead>
-                <tbody>
-                <tr id="machine-detail" class="machine-detail" th:each="machine : ${machines}">
-                    <th th:text="${machine.getId()}">1</th>
-                    <td th:text="${machine.getName()}"></td>
-                    <td th:text="${machine.getDescription()}"></td>
-                    <td th:text="${machine.getBrand()}"></td>
-                    <td th:text="${machine.getModel()}"></td>
-                    <td  class="text-center">
-                        <input type="checkbox" class="toggle toggle-success" th:checked="${ machine.getIsActive() }" />
-                    </td>
-                    <td class="flex flex-row gap-5">
-                        <div
-                                class="rounded-md bg-green-600 px-2.5 py-1.5 text-sm font-semibold text-white shadow-sm hover:bg-green-700"
-                                th:hx-get="@{/machines/{id}(id=${machine.getId()})}"
-                                hx-target="#machine_page_content"
-                        >
-                            Edit
-                        </div>
-                        <button id="delete-button"
-                                class="rounded-md bg-red-500 px-2.5 py-1.5 text-sm font-semibold text-white shadow-sm hover:bg-red-600 focus-visible:outline-red-600"
-                                th:hx-delete="@{/machines/{id}(id=${machine.id})}"
-                                hx-target="#machine_page_content"
-                        >
-                            Delete
-                        </button>
-                    </td>
-                </tr>
-                </tbody>
-            </table>
+        <div class="mt-8 flow-root w-full">
+            <div class="-mx-4 -my-2 overflow-x-auto sm:-mx-6 lg:-mx-8">
+                <div class="inline-block min-w-full py-2 align-middle sm:px-6 lg:px-8">
+                    <table id="machines" class="min-w-full divide-y divide-gray-300">
+                        <thead>
+                        <tr>
+                            <th class="px-4 relative py-3.5 pl-3 pr-4 sm:pr-0"></th>
+                            <th class="text-start py-3.5 pl-4 pr-3 text-left text-sm font-semibold text-gray-900 sm:pl-0">Name</th>
+                            <th class="text-start px-3 py-3.5 text-left text-sm font-semibold text-gray-900" >Description</th>
+                            <th class="text-start px-3 py-3.5 text-left text-sm font-semibold text-gray-900">Brand</th>
+                            <th class="text-start px-3 py-3.5 text-left text-sm font-semibold text-gray-900">Model</th>
+                            <th>Is Active</th>
+                        </tr>
+                        </thead>
+                        <tbody>
+                        <tr id="machine-detail" class="machine-detail" th:each="machine : ${machines}">
+                            <th th:text="${machine.getId()}">1</th>
+                            <td class="whitespace-nowrap px-3 py-4 text-sm text-gray-500"th:text="${machine.getMachineName()}"></td>
+                            <td class="whitespace-nowrap px-3 py-4 text-sm text-gray-500" th:text="${machine.getMachineType()}"></td>
+                            <td class="whitespace-nowrap px-3 py-4 text-sm text-gray-500" th:text="${machine.getMachineSubType()}"></td>
+                            <td th:text="${machine.getWpcsDataPath()}"></td>
+                            <td  class="text-center">
+                                <input type="checkbox" class="toggle toggle-success" th:checked="${ machine.getIsInUse() }" />
+                            </td>
+                            <td class="flex flex-row py-2 gap-5">
+                                <button
+                                        class="rounded-md bg-green-600 px-2.5 py-1.5 text-sm font-semibold text-white shadow-sm hover:bg-green-700"
+                                        th:hx-get="@{/machines/{id}(id=${machine.getId()})}"
+                                        hx-target="#machine_page_content"
+                                >
+                                    Edit
+                                </button>
+                                <button id="delete-button"
+                                        class="rounded-md bg-red-500 px-2.5 py-1.5 text-sm font-semibold text-white shadow-sm hover:bg-red-600 focus-visible:outline-red-600"
+                                        th:hx-delete="@{/machines/{id}(id=${machine.getId()})}"
+                                        hx-target="#machine_page_content"
+                                >
+                                    Delete
+                                </button>
+                            </td>
+                        </tr>
+                        </tbody>
+                    </table>
+                </div>
+            </div>
         </div>
     </div>
 </body>
