--- a/src/main/resources/templates/plans/list.html
+++ b/src/main/resources/templates/plans/list.html
@@ -7,13 +7,16 @@
             <h1 class="text-base font-semibold leading-6 text-gray-900">Plans</h1>
             <p class="mt-2 text-sm text-gray-700">These are the most recent 100 plans</p>
         </div>
-        <div class="mt-4 sm:ml-16 sm:mt-0 sm:flex-none">
+        <div class="flex justify-between">
+            <div class="grow"></div>
+            <div class="grow-0">
             <button type="button"
                     class="block rounded-md bg-indigo-600 px-3 py-2 text-center text-sm font-semibold text-white shadow-sm hover:bg-indigo-500 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-600"
                     th:hx-get="@{/plans/new}"
                     hx-target="#plan_page_content"
 
             >Creat Plan</button>
+            </div>
         </div>
     </div>
     <div class="mt-8 flow-root w-full">
