June 6, 2024 - before presentation

--- a/src/main/resources/templates/layout/main.html
+++ b/src/main/resources/templates/layout/main.html
@@ -205,37 +205,22 @@
                                         Batch Orders
                                     </a>
                                 </li>
-                                <li>
-                                    <a href="#" class="text-indigo-200 hover:text-white hover:bg-indigo-700 group flex gap-x-3 rounded-md p-2 text-sm leading-6 font-semibold">
-                                        <svg class="h-6 w-6 shrink-0 text-indigo-200 group-hover:text-white" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" aria-hidden="true">
-                                            <path stroke-linecap="round" stroke-linejoin="round" d="M10.5 6a7.5 7.5 0 107.5 7.5h-7.5V6z" />
-                                            <path stroke-linecap="round" stroke-linejoin="round" d="M13.5 10.5H21A7.5 7.5 0 0013.5 3v7.5z" />
-                                        </svg>
-                                        Reports
-                                    </a>
-                                </li>
                             </ul>
                         </li>
                         <li>
-                            <div class="text-xs font-semibold leading-6 text-indigo-200">Your teams</div>
+                            <div class="text-xs font-semibold leading-6 text-indigo-200">Other links</div>
                             <ul role="list" class="-mx-2 mt-2 space-y-1">
                                 <li>
                                     <!-- Current: "bg-indigo-700 text-white", Default: "text-indigo-200 hover:text-white hover:bg-indigo-700" -->
                                     <a href="#" class="text-indigo-200 hover:text-white hover:bg-indigo-700 group flex gap-x-3 rounded-md p-2 text-sm leading-6 font-semibold">
                                         <span class="flex h-6 w-6 shrink-0 items-center justify-center rounded-lg border border-indigo-400 bg-indigo-500 text-[0.625rem] font-medium text-white">H</span>
-                                        <span class="truncate">Heroicons</span>
+                                        <span class="truncate">Reports</span>
                                     </a>
                                 </li>
                                 <li>
                                     <a href="#" class="text-indigo-200 hover:text-white hover:bg-indigo-700 group flex gap-x-3 rounded-md p-2 text-sm leading-6 font-semibold">
                                         <span class="flex h-6 w-6 shrink-0 items-center justify-center rounded-lg border border-indigo-400 bg-indigo-500 text-[0.625rem] font-medium text-white">T</span>
-                                        <span class="truncate">Tailwind Labs</span>
-                                    </a>
-                                </li>
-                                <li>
-                                    <a href="#" class="text-indigo-200 hover:text-white hover:bg-indigo-700 group flex gap-x-3 rounded-md p-2 text-sm leading-6 font-semibold">
-                                        <span class="flex h-6 w-6 shrink-0 items-center justify-center rounded-lg border border-indigo-400 bg-indigo-500 text-[0.625rem] font-medium text-white">W</span>
-                                        <span class="truncate">Workcation</span>
+                                        <span class="truncate">AME News</span>
                                     </a>
                                 </li>
                             </ul>
