--- a/src/main/resources/templates/batch-orders/list.html
+++ b/src/main/resources/templates/batch-orders/list.html
@@ -1,47 +1,64 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <body>
-<div id="order-list" class="container mx-auto mt-4 min-h-dvh w-full z-0 flex flex-col">
+<div id="order-list" class="px-4 sm:px-6 lg:px-8 w-full">
 
-    <div class="flex justify-between">
-        <div class="grow"></div>
-        <div class="grow-0">
-            <button type="button" class="rounded-full bg-indigo-600 p-2 text-white shadow-sm hover:bg-indigo-500 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-600"
-                    th:hx-get="@{/batch-orders/new}"
-                    hx-target="#batch_order_page_content">
-                <svg class="h-5 w-5" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true">
-                    <path d="M10.75 4.75a.75.75 0 00-1.5 0v4.5h-4.5a.75.75 0 000 1.5h4.5v4.5a.75.75 0 001.5 0v-4.5h4.5a.75.75 0 000-1.5h-4.5v-4.5z" />
-                </svg>
-            </button>
+    <div class="flex flex-row justify-between sm:items-center">
+        <div class="sm:flex-auto">
+            <h1 class="text-base font-semibold leading-6 text-gray-900">Batch Orders</h1>
+            <p class="mt-2 text-sm text-gray-700">These are all recent open orders</p>
+        </div>
+        <div class="flex justify-between">
+            <div class="grow"></div>
+            <div class="grow-0">
+                <button type="button"
+                        class="block rounded-md bg-indigo-600 px-3 py-2 text-center text-sm font-semibold text-white shadow-sm hover:bg-indigo-500 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-600"
+                >Creat Batch</button>
+            </div>
         </div>
     </div>
 
-    <div class="overflow-x-auto w-full" >
-        <table class="table-auto w-full">
-            <caption class="caption-top">
-                <h1 class="text-2xl font-bold">Batch Orders</h1>
-            </caption>
-            <thead>
-            <tr>
+    <div class="mt-8 flow-root w-full">
+        <div class="-mx-4 -my-2 overflow-x-auto sm:-mx-6 lg:-mx-8">
+            <div class="inline-block min-w-full py-2 align-middle sm:px-6 lg:px-8">
+                <table class="min-w-full divide-y divide-gray-300">
+                    <thead>
+                    <tr>
+                        <th  class="px-4 relative py-3.5 pl-3 pr-4 sm:pr-0">
+                            <span x-text="all_selected ? 'Yes' : 'No'"></span>
+                            <input id="all-orders-checkbox" aria-describedby="comments-description"
+                                   name="comments" type="checkbox"
+                                   class="h-4 w-4 rounded border-gray-300 text-indigo-600 focus:ring-indigo-600"
+                            ></th>
 
                 <th>id</th>
-                <th class="text-start">Customer</th>
-                <th class="text-start">Harness</th>
-                <th class="text-start">Revision</th>
-                <th class="text-start">Release Due</th>
-                <th class="text-start">Released Date</th>
-                <th class="text-center"></th>
+                <th class="text-start px-3 py-3.5 text-left text-sm font-semibold text-gray-900">Customer</th>
+                <th class="text-start px-3 py-3.5 text-left text-sm font-semibold text-gray-900">Harness</th>
+                <th class="text-start px-3 py-3.5 text-left text-sm font-semibold text-gray-900">Revision</th>
+                <th class="text-start px-3 py-3.5 text-left text-sm font-semibold text-gray-900">Release Due</th>
+                <th class="text-start px-3 py-3.5 text-left text-sm font-semibold text-gray-900">Released Date</th>
+                        <th scope="col" class="relative py-3.5 pl-3 pr-4 sm:pr-0">
+                            <span class="sr-only">Edit</span>
+                        </th>
             </tr>
             </thead>
-            <tbody>
-            <tr id="order-detail" class="order-detail" th:each="order : ${batchOrders}">
-                <th th:text="${order.getId()}">1</th>
-                <td th:text="${order.getCustomer()}">Cy Ganderton</td>
-                <td th:text="${order.getHarness()}">Quality Control Specialist</td>
-                <td th:text="${order.getRevision()}">Blue</td>
-                <td th:text="${order.getReleaseDueDate()}"></td>
-                <td th:text="${order.getReleasedDate()}"></td>
-                <td class="buttons flex flex-row gap-5">
+
+            <tr id="order-detail" th:each="order : ${batchOrders}">
+                <td class="px-4 text-center relative py-3.5 pl-3 pr-4 sm:pr-0">
+                    <input th:id="${ 'order-id-' + order.getId() }" aria-describedby="comments-description"
+                           name="comments" type="checkbox"
+                           class="h-4 w-4 rounded border-gray-300 text-indigo-600 focus:ring-indigo-600"
+                           th:value="${order.getId()}"
+                           x-model="selected_orders"
+                    >
+                </td>
+                <th  class="whitespace-nowrap px-3 py-4 text-sm text-gray-500" th:text="${order.getId()}">1</th>
+                <td  class="whitespace-nowrap px-3 py-4 text-sm text-gray-500" th:text="${order.getCustomer()}">Cy Ganderton</td>
+                <td  class="whitespace-nowrap px-3 py-4 text-sm text-gray-500" th:text="${order.getHarness()}">Quality Control Specialist</td>
+                <td  class="whitespace-nowrap px-3 py-4 text-sm text-gray-500" th:text="${order.getRevision()}">Blue</td>
+                <td  class="whitespace-nowrap px-3 py-4 text-sm text-gray-500" th:text="${order.getReleaseDueDate()}"></td>
+                <td  class="whitespace-nowrap px-3 py-4 text-sm text-gray-500" th:text="${order.getReleasedDate()}"></td>
+                <td class="relative whitespace-nowrap py-4 pl-3 pr-4 text-right text-sm font-medium sm:pr-0">
                     <button type="button"
                             class="rounded-md bg-green-600 px-2.5 py-1.5 text-sm font-semibold text-white shadow-sm hover:bg-green-700"
                             th:hx-get="@{/batch-orders/{id}(id=${order.getId()})}"
@@ -50,14 +67,15 @@
                         Edit
                     </button>
                     <button type="button" class="rounded-md bg-red-500 px-2.5 py-1.5 text-sm font-semibold text-white shadow-sm hover:bg-red-600 focus-visible:outline-red-600"
-                            th:attr="hx-delete=@{/batch-orders/{id}(id=${order.id})}"
+                            th:attr="hx-delete=@{/batch-orders/{id}(id=${order.getId()})}"
                             hx-swap="outerHTML"
                             hx-target="closest #order-detail">DELETE</button>
 
                 </td>
             </tr>
-            </tbody>
         </table>
+    </div>
+        </div>
     </div>
 </div>
 </body>
