--- a/src/main/resources/templates/machines/machine_config_form.html
+++ b/src/main/resources/templates/machines/machine_config_form.html
@@ -103,7 +103,7 @@
                                         </div>
                                     </div>
                                     <div class="sm:grid sm:grid-cols-3 sm:items-start sm:gap-4 sm:py-6">
-                                        <label for="brandColour" class="block text-sm font-medium leading-6 text-gray-900 sm:pt-1.5">Country</label>
+                                        <label for="brandColour" class="block text-sm font-medium leading-6 text-gray-900 sm:pt-1.5">Brand Colour</label>
                                         <div class="mt-2 sm:mt-0">
                                             <select id="brandColour" name="brandColour" autocomplete="country-name" class="block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:max-w-xs sm:text-sm sm:leading-6">
                                                 <option th:selected="${ 'BLACK'.equalsIgnoreCase(displayMachine.getConfiguration().getBrandColours()) }">Black</option>
