--- a/src/main/resources/templates/plans/plan_machines.html
+++ b/src/main/resources/templates/plans/plan_machines.html
@@ -20,7 +20,7 @@
                           <path fill-rule="evenodd" d="M19.916 4.626a.75.75 0 01.208 1.04l-9 13.5a.75.75 0 01-1.154.114l-6-6a.75.75 0 011.06-1.06l5.353 5.353 8.493-12.739a.75.75 0 011.04-.208z" clip-rule="evenodd" />
                         </svg>
                       </span>
-                      <span class="ml-4 text-sm font-medium text-gray-900">Create Plan</span>
+                      <span class="ml-4 text-sm font-medium text-gray-900">Create</span>
                     </span>
                     </a>
                     <!-- Arrow separator for lg screens and up -->
@@ -37,7 +37,7 @@
                             <span class="flex h-10 w-10 flex-shrink-0 items-center justify-center rounded-full border-2 border-indigo-600 group-hover:bg-blue-700">
                               <span class="text-indigo-600 group-hover:text-white">02</span>
                             </span>
-                            <span class="ml-4 text-sm font-medium text-indigo-600">Machine Configuration</span>
+                            <span class="ml-4 text-sm font-medium text-indigo-600">Optimize</span>
                         </span>
                     </a>
                     <!-- Arrow separator for lg screens and up -->
@@ -57,7 +57,7 @@
                                   <span class="flex h-10 w-10 flex-shrink-0 items-center justify-center rounded-full border-2 border-gray-300 group-hover:border-gray-400">
                                     <span class="text-gray-500 group-hover:text-gray-900">03</span>
                                   </span>
-                                  <span class="ml-4 text-sm font-medium text-gray-500 group-hover:text-gray-900">Optimize</span>
+                                  <span class="ml-4 text-sm font-medium text-gray-500 group-hover:text-gray-900">Review</span>
                                 </span>
                     </a>
                 </li>
