--- a/src/main/resources/templates/users/index.html
+++ b/src/main/resources/templates/users/index.html
@@ -5,7 +5,7 @@
       layout:decorate="~{layout/main}"
 >
 <body>
-<section layout:fragment="content" id="users_page_content" class="container w-5/6 h-screen mx-auto mb-auto">
+<section layout:fragment="content" id="users_page_content" class="container mx-auto mt-4 min-h-dvh w-full z-0 flex flex-col border-x-green-300">
     <div th:replace="users/list"></div>
 </section>
 </body>
